# AI_Safety_Guardrail

./: .bandit.yml  .coverage  .env.example  .gitignore  .pre-commit-config.yaml  API_KEYS.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  LOGGING.md  MOCK_JUDGE.md  README.md  TESTING.md  chat.py  docker-compose.yml  logging.conf  main.py  pyproject.toml  pytest.ini  requirements.txt  safety_rules.txt
.deepeval/: .deepeval_telemetry.txt
.git.backup/: index
.git.backup/gk/: config
.github/workflows/: test.yml
docs/: CLEANUP.md  CONTRIBUTING.md  IMPLEMENTATION_SUMMARY.md  PRESIDIO_CONFIGURATION.md  README.md  TEST_STRUCTURE.md
scripts/: cleanup_global_python_packages.ps1  cleanup_global_python_packages.sh  create_api_key.py
src/safety_guardrail/: api_keys.py  chat.py  engine.py  engine_enhanced.py  main.py  vault.py
tests/: README.md  batch_judge.py  conftest.py  local_judge.py  logger_config.py  mock_judge.py  pytest_logging_plugin.py  test_api_keys.py  test_mock_judge_quick.py  test_safety.py
tests/.deepeval/: .deepeval_telemetry.txt
tests/integration/: __init__.py  test_api.py  test_safety_workflow.py
tests/negative/: __init__.py  test_edge_cases.py
tests/performance/: __init__.py  test_api_latency.py  test_masking_speed.py
tests/positive/: __init__.py  test_valid_pii_masking.py  test_valid_responses.py
tests/regression/: __init__.py  test_known_issues.py
tests/security/: __init__.py  test_pii_leakage.py  test_prompt_injection.py
tests/unit/: __init__.py  test_chat.py  test_engine.py
tools/: precommit_pytest.py
