[project]
name = "safety-guardrail"
version = "0.1.0"
description = "An API that sanitizes PII locally before routing prompts to an LLM."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "deepeval>=4.0.2",
    "fastapi>=0.136.1",
    "google-generativeai>=0.8.6",
    "presidio-analyzer>=2.2.362",
    "presidio-anonymizer>=2.2.362",
    "python-dotenv>=1.2.2",
    "spacy>=3.8.14",
    "uvicorn>=0.47.0",
]

[dependency-groups]
dev = [
    "bandit>=1.9.4",
    "pre-commit>=4.6.0",
    "pytest-cov>=7.1.0",
    "safety>=3.7.0",
]
